--- a/TP2/Trabajo Practico 2/TP2/TP2.cbp
+++ b/TP2/Trabajo Practico 2/TP2/TP2.cbp
@@ -31,6 +31,14 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Empleados.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Empleados.h" />
+		<Unit filename="Menu.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Menu.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
